src/test/ui/repr/repr-align.stderr
error[E0589]: invalid `repr(align)` attribute
  --> $DIR/repr-align.rs:3:14
   |
LL | #[repr(align(16.0))]
   |              ^^^^ not an unsuffixed integer

error[E0589]: invalid `repr(align)` attribute
  --> $DIR/repr-align.rs:7:14
   |
LL | #[repr(align(15))]
   |              ^^ not a power of two

error[E0589]: invalid `repr(align)` attribute
  --> $DIR/repr-align.rs:11:14
   |
LL | #[repr(align(4294967296))]
   |              ^^^^^^^^^^ larger than 2^29

error[E0589]: invalid `repr(align)` attribute
  --> $DIR/repr-align.rs:18:14
   |
LL | #[repr(align(16.0))]
   |              ^^^^ not an unsuffixed integer

error[E0589]: invalid `repr(align)` attribute
  --> $DIR/repr-align.rs:22:14
   |
LL | #[repr(align(15))]
   |              ^^ not a power of two

error[E0589]: invalid `repr(align)` attribute
  --> $DIR/repr-align.rs:26:14
   |
LL | #[repr(align(4294967296))]
   |              ^^^^^^^^^^ larger than 2^29

error[E0589]: invalid `repr(align)` attribute
  --> $DIR/repr-align.rs:3:14
   |
LL | #[repr(align(16.0))]
   |              ^^^^ not an unsuffixed integer

error[E0589]: invalid `repr(align)` attribute
  --> $DIR/repr-align.rs:7:14
   |
LL | #[repr(align(15))]
   |              ^^ not a power of two

error[E0589]: invalid `repr(align)` attribute
  --> $DIR/repr-align.rs:11:14
   |
LL | #[repr(align(4294967296))]
   |              ^^^^^^^^^^ larger than 2^29

error[E0589]: invalid `repr(align)` attribute
  --> $DIR/repr-align.rs:18:14
   |
LL | #[repr(align(16.0))]
   |              ^^^^ not an unsuffixed integer

error[E0589]: invalid `repr(align)` attribute
  --> $DIR/repr-align.rs:22:14
   |
LL | #[repr(align(15))]
   |              ^^ not a power of two

error[E0589]: invalid `repr(align)` attribute
  --> $DIR/repr-align.rs:26:14
   |
LL | #[repr(align(4294967296))]
   |              ^^^^^^^^^^ larger than 2^29

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0589`.
